hc32f448/drivers/hc32_ll_driver/inc/hc32_ll_qspi.h


typedef struct {
    uint32_t u32ClockDiv;               
    uint32_t u32SpiMode;                
    uint32_t u32PrefetchMode;           
    uint32_t u32ReadMode;               
    uint32_t u32DummyCycle;             
    uint32_t u32AddrWidth;              
    uint32_t u32SetupTime;              
    uint32_t u32ReleaseTime;            
    uint32_t u32IntervalTime;           
} stc_qspi_init_t;
typedef struct {
    uint32_t u32InstrProtocol;          
    uint32_t u32AddrProtocol;           
    uint32_t u32DataProtocol;           
    uint8_t  u8InstrCode;               
} stc_qspi_custom_mode_t;
#define QSPI_ROM_BASE                           (0x98000000UL)
#define QSPI_ROM_END                            (0x9BFFFFFFUL)
#define QSPI_CLK_DIV2                           (0x01UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV3                           (0x02UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV4                           (0x03UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV5                           (0x04UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV6                           (0x05UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV7                           (0x06UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV8                           (0x07UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV9                           (0x08UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV10                          (0x09UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV11                          (0x0AUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV12                          (0x0BUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV13                          (0x0CUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV14                          (0x0DUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV15                          (0x0EUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV16                          (0x0FUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV17                          (0x10UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV18                          (0x11UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV19                          (0x12UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV20                          (0x13UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV21                          (0x14UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV22                          (0x15UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV23                          (0x16UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV24                          (0x17UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV25                          (0x18UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV26                          (0x19UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV27                          (0x1AUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV28                          (0x1BUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV29                          (0x1CUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV30                          (0x1DUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV31                          (0x1EUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV32                          (0x1FUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV33                          (0x20UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV34                          (0x21UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV35                          (0x22UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV36                          (0x23UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV37                          (0x24UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV38                          (0x25UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV39                          (0x26UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV40                          (0x27UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV41                          (0x28UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV42                          (0x29UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV43                          (0x2AUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV44                          (0x2BUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV45                          (0x2CUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV46                          (0x2DUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV47                          (0x2EUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV48                          (0x2FUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV49                          (0x30UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV50                          (0x31UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV51                          (0x32UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV52                          (0x33UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV53                          (0x34UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV54                          (0x35UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV55                          (0x36UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV56                          (0x37UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV57                          (0x38UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV58                          (0x39UL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV59                          (0x3AUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV60                          (0x3BUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV61                          (0x3CUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV62                          (0x3DUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV63                          (0x3EUL << QSPI_CR_DIV_POS)     
#define QSPI_CLK_DIV64                          (0x3FUL << QSPI_CR_DIV_POS)     
#define QSPI_SPI_MD0                            (0UL)               
#define QSPI_SPI_MD3                            (QSPI_CR_SPIMD3)    
#define QSPI_PREFETCH_MD_INVD                   (0UL)                           
#define QSPI_PREFETCH_MD_EDGE_STOP              (QSPI_CR_PFE)                   
#define QSPI_PREFETCH_MD_IMMED_STOP             (QSPI_CR_PFE | QSPI_CR_PFSAE)   
#define QSPI_RD_MD_STD_RD                       (0UL)                           
#define QSPI_RD_MD_FAST_RD                      (0x01UL << QSPI_CR_MDSEL_POS)   
#define QSPI_RD_MD_DUAL_OUTPUT_FAST_RD          (0x02UL << QSPI_CR_MDSEL_POS)   
#define QSPI_RD_MD_DUAL_IO_FAST_RD              (0x03UL << QSPI_CR_MDSEL_POS)   
#define QSPI_RD_MD_QUAD_OUTPUT_FAST_RD          (0x04UL << QSPI_CR_MDSEL_POS)   
#define QSPI_RD_MD_QUAD_IO_FAST_RD              (0x05UL << QSPI_CR_MDSEL_POS)   
#define QSPI_RD_MD_CUSTOM_STANDARD_RD           (0x06UL << QSPI_CR_MDSEL_POS)   
#define QSPI_RD_MD_CUSTOM_FAST_RD               (0x07UL << QSPI_CR_MDSEL_POS)   
#define QSPI_DUMMY_CYCLE3                       (0UL)                           
#define QSPI_DUMMY_CYCLE4                       (0x01UL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE5                       (0x02UL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE6                       (0x03UL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE7                       (0x04UL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE8                       (0x05UL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE9                       (0x06UL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE10                      (0x07UL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE11                      (0x08UL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE12                      (0x09UL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE13                      (0x0AUL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE14                      (0x0BUL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE15                      (0x0CUL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE16                      (0x0DUL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE17                      (0x0EUL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_DUMMY_CYCLE18                      (0x0FUL << QSPI_FCR_DMCYCN_POS) 
#define QSPI_ADDR_WIDTH_8BIT                    (0x0U)                              
#define QSPI_ADDR_WIDTH_16BIT                   (QSPI_FCR_AWSL_0)                   
#define QSPI_ADDR_WIDTH_24BIT                   (QSPI_FCR_AWSL_1)                   
#define QSPI_ADDR_WIDTH_32BIT_INSTR_24BIT       (QSPI_FCR_AWSL)                     
#define QSPI_ADDR_WIDTH_32BIT_INSTR_32BIT       (QSPI_FCR_AWSL | QSPI_FCR_FOUR_BIC) 
#define QSPI_QSSN_SETUP_ADVANCE_QSCK0P5         (0UL)               
#define QSPI_QSSN_SETUP_ADVANCE_QSCK1P5         (QSPI_FCR_SSNLD)    
#define QSPI_QSSN_RELEASE_DELAY_QSCK0P5         (0UL)                       
#define QSPI_QSSN_RELEASE_DELAY_QSCK1P5         (QSPI_FCR_SSNHD)            
#define QSPI_QSSN_RELEASE_DELAY_QSCK32          (QSPI_CSCR_SSNW_0 << 8U)    
#define QSPI_QSSN_RELEASE_DELAY_QSCK128         (QSPI_CSCR_SSNW_1 << 8U)    
#define QSPI_QSSN_RELEASE_DELAY_INFINITE        (QSPI_CSCR_SSNW   << 8U)    
#define QSPI_QSSN_INTERVAL_QSCK1                (0UL)                           
#define QSPI_QSSN_INTERVAL_QSCK2                (0x01UL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK3                (0x02UL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK4                (0x03UL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK5                (0x04UL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK6                (0x05UL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK7                (0x06UL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK8                (0x07UL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK9                (0x08UL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK10               (0x09UL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK11               (0x0AUL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK12               (0x0BUL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK13               (0x0CUL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK14               (0x0DUL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK15               (0x0EUL << QSPI_CSCR_SSHW_POS)  
#define QSPI_QSSN_INTERVAL_QSCK16               (0x0FUL << QSPI_CSCR_SSHW_POS)  
#define QSPI_INSTR_PROTOCOL_1LINE               (0x0U)              
#define QSPI_INSTR_PROTOCOL_2LINE               (QSPI_CR_IPRSL_0)   
#define QSPI_INSTR_PROTOCOL_4LINE               (QSPI_CR_IPRSL_1)   
#define QSPI_ADDR_PROTOCOL_1LINE                (0x0U)              
#define QSPI_ADDR_PROTOCOL_2LINE                (QSPI_CR_APRSL_0)   
#define QSPI_ADDR_PROTOCOL_4LINE                (QSPI_CR_APRSL_1)   
#define QSPI_DATA_PROTOCOL_1LINE                (0x0U)              
#define QSPI_DATA_PROTOCOL_2LINE                (QSPI_CR_DPRSL_0)   
#define QSPI_DATA_PROTOCOL_4LINE                (QSPI_CR_DPRSL_1)   
#define QSPI_WP_PIN_LOW                         (0x0U)          
#define QSPI_WP_PIN_HIGH                        (QSPI_FCR_WPOL) 
#define QSPI_DIRECT_COMM_PROTOCOL_1LINE         (0x0U)                  
#define QSPI_DIRECT_COMM_PROTOCOL_2LINE         (QSPI_DCOM_DCOMPRSL_0)  
#define QSPI_DIRECT_COMM_PROTOCOL_4LINE         (QSPI_DCOM_DCOMPRSL_1)  
#define QSPI_FLAG_DIRECT_COMM_BUSY              (QSPI_SR_BUSY)  
#define QSPI_FLAG_XIP_MD                        (QSPI_SR_XIPF)  
#define QSPI_FLAG_ROM_ACCESS_ERR                (QSPI_SR_RAER)  
#define QSPI_FLAG_PREFETCH_BUF_FULL             (QSPI_SR_PFFUL) 
#define QSPI_FLAG_PREFETCH_STOP                 (QSPI_SR_PFAN)  
#define QSPI_FLAG_ALL                           (QSPI_FLAG_DIRECT_COMM_BUSY | QSPI_FLAG_XIP_MD            | \
                                                 QSPI_FLAG_ROM_ACCESS_ERR   | QSPI_FLAG_PREFETCH_BUF_FULL | \
                                                 QSPI_FLAG_PREFETCH_STOP)
#define QSPI_FLAG_CLR_ALL                       (QSPI_FLAG_ROM_ACCESS_ERR)
int32_t QSPI_Init(const stc_qspi_init_t *pstcQspiInit);
int32_t QSPI_StructInit(stc_qspi_init_t *pstcQspiInit);
void QSPI_SetWpPinLevel(uint32_t u32Level);
void QSPI_SetPrefetchMode(uint32_t u32Mode);
void QSPI_SelectMemoryBlock(uint8_t u8Block);
void QSPI_SetReadMode(uint32_t u32Mode);
int32_t QSPI_CustomReadConfig(const stc_qspi_custom_mode_t *pstcCustomMode);
void QSPI_XipModeCmd(uint8_t u8ModeCode, en_functional_state_t enNewState);
void QSPI_EnterDirectCommMode(void);
void QSPI_ExitDirectCommMode(void);
void QSPI_WriteDirectCommValue(uint32_t u32Protocol, uint8_t u8Value);
uint8_t QSPI_GetPrefetchBufSize(void);
en_flag_status_t QSPI_GetStatus(uint32_t u32Flag);
void QSPI_ClearStatus(uint32_t u32Flag);